feat(ModalStartProject): add likns & fix some translation

--- a/frontend/src/shared/lib/i18n/locales/uk/features.json
+++ b/frontend/src/shared/lib/i18n/locales/uk/features.json
@@ -1,9 +1,8 @@
 {
   "contactForm": {
     "close": "Закрити",
-    "title": "Почати проект",
-    "subtitle": "Розкажіть нам трохи про ваш проект! Просто заповніть форму або напишіть нам на",
-    "subtitleEnd": "— ми зв'яжемося з вами якомога швидше.",
+    "title": "Почати проєкт",
+    "subtitleFull": "Розкажіть нам трохи про ваш проєкт! Просто заповніть форму або напишіть нам на <email>E-Mail</email> або <telegram>Telegram</telegram> — ми зв'яжемося з вами якомога швидше.",
     "fields": {
       "firstName": {
         "label": "Ім'я",
@@ -20,8 +19,8 @@
       },
 
       "projectDetails": {
-        "label": "Деталі проекту",
-        "placeholder": "Опишіть свій проект"
+        "label": "Деталі проєкту",
+        "placeholder": "Опишіть свій проєкт"
       }
     },
     "submit": "Надіслати"
