feat(ContactForm): disable submit button if validation failed

--- a/frontend/src/shared/lib/i18n/locales/uk/features.json
+++ b/frontend/src/shared/lib/i18n/locales/uk/features.json
@@ -23,6 +23,9 @@
         "placeholder": "Опишіть свій проєкт"
       }
     },
-    "submit": "Надіслати"
+    "submitButton": {
+      "default": "Надіслати",
+      "validationFailed": "Будь ласка, заповніть форму правильно"
+    }
   }
 }
